// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works Frame 1`] = `
.c0 {
  display: block width:100vw height:200px overflow:hidden background:grey position:relative;
}

<div
  class="c0"
  height="200"
/>
`;

exports[`it works SlideItem 1`] = `
.c0 {
  display: inline-block height:100% width:200px;
}

<div
  class="c0"
  width="200"
/>
`;
